@@ -48,10 +48,10 @@
 }
 
 
- Mx=20;
+ Mx=22;
 My=0.0;
 P=300/Mx^2*16^2;
-T=238;
+T=150;
 Twall=2000;
 
 
